--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.24.0",
     "classnames": "^2.3.1",
     "express": "^4.17.1",
+    "firebase": "^9.6.0",
     "jquery": "^3.6.0",
     "mongoose": "^6.0.13",
     "node-sass": "^4.14.1",
@@ -22,6 +23,7 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-firebaseui": "^6.0.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
