--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.24.0",
     "classnames": "^2.3.1",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "firebase": "^9.6.0",
     "jquery": "^3.6.0",
@@ -26,6 +27,7 @@
     "react-firebaseui": "^6.0.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-slick": "^0.28.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
