--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "firebase": "^9.6.0",
     "jquery": "^3.6.0",
     "mongoose": "^6.0.13",
+    "node": "^14.17.4",
     "node-sass": "^4.14.1",
     "nodemon": "^2.0.15",
+    "npm": "^6.14.14",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -30,15 +32,17 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-slick": "^0.28.1",
+    "react-transition-group": "^4.4.2",
     "validator": "^13.7.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "nodemon server",
+    "start": "react-scripts start",
+    "site": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "server": "json-server --w src/data/db.json --port 3003",
+    "server": "nodemon server",
     "mongo": "mongod --dbpath=/data"
   },
   "eslintConfig": {
