Ajout des form New, Edit, etc... SCSS

--- a/client/package.json
+++ b/client/package.json
@@ -66,5 +66,9 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:3000/"
+  "proxy": "http://localhost:3000/",
+  "devDependencies": {
+    "file-loader": "^6.2.0",
+    "url-loader": "^4.1.1"
+  }
 }
