--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "firebase": "^9.6.0",
+    "google-maps-react": "^2.0.6",
     "jquery": "^3.6.0",
     "mongoose": "^6.0.13",
     "node": "^14.17.4",
@@ -29,7 +30,10 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-facebook": "^8.1.4",
     "react-firebaseui": "^6.0.0",
+    "react-geocode": "^0.2.3",
+    "react-places-autocomplete": "^7.3.0",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^4.0.3",
