Module stripe bancaire

--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "@fortawesome/fontawesome-free": "^5.15.4",
     "axios": "^0.21.0",
     "bcrypt": "^5.0.0",
-    "body-parser": "^1.19.0",
+    "body-parser": "^1.20.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
+    "dotenv": "^8.6.0",
     "express": "^4.17.2",
     "express-fileupload": "^1.2.0",
     "js-cookie": "^2.2.1",
@@ -26,6 +26,7 @@
     "nodemon": "^2.0.6",
     "react-cookie": "^4.1.1",
     "reactjs-popup": "^2.0.4",
+    "stripe": "^8.218.0",
     "validator": "^13.1.17"
   }
 }
